tests/trybuild/add_incompatible.stderr
error[E0308]: mismatched types
  --> $DIR/add_incompatible.rs:21:16
   |
21 |     matrix_1 + matrix_2;
   |                ^^^^^^^^ expected `24_usize`, found `9_usize`
   |
   = note: expected struct `Matrix<_, 24_usize>`
              found struct `Matrix<_, 9_usize>`
